Add Create Buckets. Store AWSCLI keys for all generated Users

--- a/roles/user/templates/credentials.j2
+++ b/roles/user/templates/credentials.j2
@@ -1,3 +1,10 @@
-[default]
-aws_access_key_id = "{{ s3_keys.results.0.json.0.accessKey }}"
-aws_secret_access_key = "{{ s3_keys.results.0.json.0.secretKey }}"
+{% for data in s3_keys.results %}
+  {% set user = data.item.key %}
+  {% set accessKey = data.json.0.accessKey %}
+  {% set secretKey = data.json.0.secretKey %}
+
+[{{ user }}]
+aws_access_key_id = {{ accessKey }}
+aws_secret_access_key = {{ secretKey }}
+
+{% endfor %}
