Add usage to awscli credentials template

--- a/roles/user/templates/credentials.j2
+++ b/roles/user/templates/credentials.j2
@@ -1,9 +1,16 @@
+
+# Usage:
+#   Either copy this file to ~/.aws/credentials or:
+#   Set env. variable AWS_CONFIG_FILE to point to this file or:
+#   Set both S3 key variables. See export examples below
+
 {% for data in s3_keys.results %}
-  {% set user = data.item.key %}
-  {% set accessKey = data.json.0.accessKey %}
-  {% set secretKey = data.json.0.secretKey %}
+  {%- set user = data.item.key %}
+  {%- set accessKey = data.json.0.accessKey %}
+  {%- set secretKey = data.json.0.secretKey %}
 
 [{{ user }}]
+# export AWS_ACCESS_KEY_ID="{{ accessKey }}" AWS_SECRET_ACCESS_KEY="{{ secretKey }}"
 aws_access_key_id = {{ accessKey }}
 aws_secret_access_key = {{ secretKey }}
 
